--- a/src/app/components/styles/header.scss
+++ b/src/app/components/styles/header.scss
@@ -207,7 +207,7 @@ header {
 	flex-direction: row;
 	justify-content: flex-end;
 	font-family: 'Josefin Slab';
-	font-size: 1.2rem;
+	font-size: 22px;
 	font-weight: bold;
 	color: blue;
 	@media (max-width: $phablet ) {
